[package]
name = "squelch-break"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sb"
path = "src/bin/cli.rs"

[[bin]]
name = "sb-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.1.0"
clap = "2.34.0"
tokio = { version = "1.15.0", features = ["full"] }
